Fix ESLint errors and CSS warnings - replace bg-gradient-to with bg-linear-to, fix any types

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "tone": "^15.1.22",
     "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
